<resources>
	<string name="app_name">Zennet VPN</string>
	<string name="app_display_name">Zennet VPN</string>
	<string name="lib_name">libraryTrileadSSH2</string>
    <string name="SHAN_rewardedid">ca-app-pub-3940256099942544/5224354917</string>
    <string name="SHAN_intersid">ca-app-pub-3940256099942544/1033173712</string>
    <string name="SHAN_bannerid">ca-app-pub-3940256099942544/6300978111</string>
	<string name="SHAN_appopenid">ca-app-pub-3940256099942544/3419835294</string>
    <string name="SHAN_appid">ca-app-pub-3940256099942544~3347511713</string>
	<string name="hello_world">Hello world!</string>
	<string name="app_description">HTTP Tunnel is an SSH TUNNEL client, designed to bypass local blocking and censorship on the network.</string>
	<string name="attention">Attention</string>
	<string name="cancel">Cancel</string>
	<string name="ok">Ok</string>
	<string name="exit">Exit</string>
	<string name="ssh_connecting">Connecting</string>
    <string name="name_file">File name</string>
	<string name="direct">SSH → Direct</string>
	<string name="http">SSH → HTTP Proxy</string>
	<string name="ssl">SSH → SSL/TLS</string>
	<string name="slowdns">SSH → SlowDNS</string>
	<string name="sslrp">SSH → Ssl/Payload/RemoteProxy</string>
	<string name="sslpy">SSH → Ssl/Payload</string>
	<string name="custom_payload1"> (Custom Payload) </string>
	<string name="public_key">Public Key</string>
	<string name="summary_private_key">"Your slowdns server's public key"</string>
	<string name="title_name_server">Server Name</string>
	<string name="summary_name_server">The hostname of the SlowDNS server</string>
	<string name="slowdns_configuration">SlowDNS Settings</string>
	<string name="summary_dns">The DNS IP of your SlowDNS server</string>
    <string name="tunnel_stop">Tunnel Thread Stopped</string>
    <string name="tunnel_start">Tunnel Thread Started</string>
	<string name="error_request_permission">You need access to External Storage</string>
	<string name="importing_settings">Importing configuration</string>
	<string name="log_settings_valid">File valid until: %1$s</string>
	<string name="log_server_banner">Server Message:</string>
	<string name="log_conection_lost">Connection lost</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="reconnect">Reconnect</string>
	<string name="stopping_service_ssh">Stopping SSH service</string>
	<string name="starting_service_ssh">Starting SSH service</string>
	<string name="title_auth">Authentication</string>
	<string name="auth_message">Complete with SSH account details</string>
	<string name="auth_username">Username</string>
	<string name="password">Password</string>
	<string name="show_password">Show password</string>
	<string name="save_password">Save password</string>
	<string name="channel_name_background">Connection statistics</string>
	<string name="channel_description_background">Ongoing statistics of the established SocksHttp connection</string>
	<string name="channel_name_status">Connection status change</string>
	<string name="channel_description_status">Status changes of the HTTP Tunnel connection (Connecting, authenticating,…)</string>
	<string name="channel_name_userreq">User interaction required</string>
	<string name="channel_description_userreq">HTTP Tunnel connection requires a user input, e.g. two factor authentification</string>
	<string name="state_starting">Getting Started</string>
	<string name="state_connecting">Connecting</string>
	<string name="state_wait">Waiting for server response</string>
	<string name="state_auth">Authenticating</string>
	<string name="state_auth_success">Forward Successful</string>
	<string name="state_get_config">Getting client configuration</string>
	<string name="state_assign_ip">Assigning IP addresses</string>
	<string name="state_add_routes">Adding routes</string>
	<string name="state_connected">Connected</string>
	<string name="state_disconnected">Disconnected</string>
	<string name="state_reconnecting">Reconnecting</string>
	<string name="state_stopping">Stopping</string>
	<string name="state_noprocess">Not running</string>
	<string name="state_resolve">Resolving host names</string>
	<string name="state_tcp_connect">Connecting (TCP)</string>
	<string name="state_auth_failed">Authentication failed</string>
	<string name="state_nonetwork">Waiting for network</string>
	<string name="state_waitconnectretry">Waiting %ss seconds between connection attempt</string>
	<string name="state_auth_pending">Waiting for Autentication</string>
	<string name="state_user_vpn_password">Waiting for user VPN password</string>
	<string name="state_user_vpn_permission">Waiting for user permission to use VPN API</string>
	<string name="state_user_vpn_password_cancelled">VPN password input dialog cancelled</string>
	<string name="state_user_vpn_permission_cancelled">VPN API permission dialog cancelled</string>
	<string name="unknown_state">Unknown Status</string>
	<string name="nought_alwayson_warning">If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS</string>
	<string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
	<string name="state_proxy_running">Injecting</string>
	<string name="state_proxy_inject">Injecting</string>
	<string name="mobile_info">Running on %3$s %1$s (%2$s), Android %5$s API %4$d</string>
	<string name="app_mobile_info">Application Version: %1$s %2$s</string>
	<string name="alert_update_app">Install the latest version</string>
	<string name="error_settings_expired">Expired file</string>
	<string name="error_file_settings_invalid">Invalid configuration</string>
	<string name="error_file_invalid">Invalid File</string>
	<string name="error_internet_off">Please connect to the internet</string>
	<string name="error_empty_payload">Payload cannot be empty</string>
	<string name="error_empty_settings">Configure correctly to start</string>
	<string name="error_proxy_invalid">Invalid proxy</string>
	<string name="error_server_ip_invalid">Invalid server/IP</string>
	<string name="error_root_detected">Locked configuration for devices with root access and root-related applications.</string>
	<string name="error_vpn_sniffer_detected">Another running VPN application has been detected, stop it before</string>
	<string name="error_save_settings">"Couldn't save configuration"</string>
	<string name="permited_only_network_mobile">Configuration allowed only for mobile data network</string>
	<string name="error_dns_invalid">The typed DNS is invalid</string>
	<string name="connection_test_error">Fail to detect internet connection: %s</string>
	<string name="connection_test_error_status_code">Error code: #%d</string>
	<string name="error_torrent_app_detected">Configuration locked for Torrent. Remove any related apps from your device.</string>
	<string name="alert_torrent_blocked">Configuration locked for Torrent.</string>
	<string name="alert_compression_data">Data compression active.</string>
	<string name="alert_mode_debug">Debug mode enabled</string>
	<string name="alert_udp_forward">UDP forwarding active.</string>
	<string name="error_id_hardware_block">This setting cannot be imported on that device</string>
	<string name="service_vpn_running">VPN service running</string>
	<string name="info_proxy_network">Network Proxy: %s</string>
	<string name="info_auth_with_pass">Authenticating with password</string>
	<string name="error_auth_expired">Failed to authenticate, expired user or password</string>
	<string name="bits_per_second">%.0f bit/s</string>
	<string name="kbits_per_second">%.1f kbit/s</string>
	<string name="mbits_per_second">%.1f Mbit/s</string>
	<string name="gbits_per_second">%.1f Gbit/s</string>
	<string name="volume_byte">%.0f B</string>
	<string name="volume_kbyte">%.1f kB</string>
	<string name="volume_mbyte">%.1f MB</string>
	<string name="volume_gbyte">%.1f GB</string>
	<string name="statusline_bytecount">↓%2$s %1$s - ↑%4$s %3$s</string>
	<string name="reread_log">Reread (%d) log items from log cache file</string>
	<string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
	<string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
	<string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
	<string name="character_counter_pattern">%1$d / %2$d</string>
	<string name="password_toggle_content_description">Toggle password visibility</string>
	<string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
	<string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
	<string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
	<string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
	<string name="abc_action_bar_home_description">Navigate home</string>
	<string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
	<string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
	<string name="abc_action_bar_up_description">Navigate up</string>
	<string name="abc_action_menu_overflow_description">More options</string>
	<string name="abc_action_mode_done">Done</string>
	<string name="abc_activity_chooser_view_see_all">See all</string>
	<string name="abc_activitychooserview_choose_application">Choose an app</string>
	<string name="abc_capital_off">OFF</string>
	<string name="abc_capital_on">ON</string>
	<string name="abc_search_hint">Search…</string>
	<string name="abc_searchview_description_clear">Clear query</string>
	<string name="abc_searchview_description_query">Search query</string>
	<string name="category_forward_udp">Udp forwarding</string>
	<string name="title_forward_udp">Forward UDP</string>
	<string name="summary_forward_udp">If active, it redirects requests to the remote server. If not, UDP requests will not be resolved.</string>
	<string name="title_resolver_udp">UDP Gateway (Remote)</string>
	<string name="summary_resolver_udp">Standard (7300)</string>
	<string name="category_forward_dns">DNS Forwarding</string>
	<string name="title_forward_dns">Forward DNS</string>
	<string name="summary_forward_dns">If active, it redirects requests to the remote server. If not, DNS requests will be resolved by the local system.</string>
	<string name="title_dns_primary">Primary DNS</string>
	<string name="category_advanced_settings">Advanced Settings</string>
	<string name="title_hide_log">Hide Log on Start</string>
	<string name="title_auto_clear_log">Automatically Clear Logs</string>
	<string name="summary_auto_clear_log">If active, logs are automatically cleared.</string>
	<string name="category_settings_adicionais">Additional configurations</string>
	<string name="title_mode_night">Night Mode</string>
	<string name="title_ping_time">Ping (seconds)</string>
	<string name="category_user_interface">User Interface</string>
	<string name="title_language">Language</string>
	<string name="no_value">none</string>
	<string name="title_disable_delay_ssh">Disable TCP Delay</string>
	<string name="summary_disable_delay_ssh">If active there will be no delays between requests, which can improve ping or even the speed of the connection.</string>
	<string name="title_tethering_subnet">Tethering Subnet (beta)</string>
	<string name="summary_tethering_subnet">"Enable it if you're having trouble sharing your device's internet."</string>
</resources>