<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">


	<androidx.preference.PreferenceCategory
		android:title="@string/category_advanced_settings">
		
		<androidx.preference.CheckBoxPreference
			android:key="modeDebug"
			android:summary="Unavailable"
			android:title="Debug mode"
            android:enabled="false"/>
		
		<androidx.preference.ListPreference
        	android:key="numberMaxThreadSocks"
            android:title="Maximum Number of Threads"
			android:summary="25th"
			android:defaultValue="25th"
        	android:entries="@array/pref_maxThreads_option_labels"
        	android:entryValues="@array/pref_maxThreads_option_values"
		/>
		
		<androidx.preference.CheckBoxPreference
			android:key="tetherSubnet"
			android:summary="@string/summary_tethering_subnet"
			android:title="@string/title_tethering_subnet"
		/>
		
		<androidx.preference.CheckBoxPreference
			android:key="disableDelaySSH"
			android:title="@string/title_disable_delay_ssh"
			android:summary="@string/summary_disable_delay_ssh"
		/>
	
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="filter">
	
		<androidx.preference.CheckBoxPreference
			android:key="filterApps"
			android:title="Filter Apps"
		/>
	
		<androidx.preference.CheckBoxPreference
			android:key="filterBypassMode"
			android:summary="Filter Bypass Mode"
			android:title="App"
		/>
	
		<androidx.preference.EditTextPreference
            android:key="filterAppsList"
            android:title="Apps List"
            android:dialogMessage=""
			android:singleLine="true"
		/>
		
	</androidx.preference.PreferenceCategory>
	
	
</androidx.preference.PreferenceScreen>
